--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -324,6 +324,33 @@
   note         = {Último acceso: julio 2025}
 }
 
+
+@inproceedings{just2014mutants,
+  title={Are mutants a valid substitute for real faults in software testing?},
+  author={Just, René and Rungta, Neha and Kapfhammer, Gregory M},
+  booktitle={Proceedings of the 22nd ACM SIGSOFT International Symposium on Foundations of Software Engineering (FSE)},
+  pages={654--665},
+  year={2014}
+}
+
+@article{jia2011analysis,
+  title={An analysis and survey of the development of mutation testing},
+  author={Jia, Yue and Harman, Mark},
+  journal={IEEE Transactions on Software Engineering},
+  volume={37},
+  number={5},
+  pages={649--678},
+  year={2011}
+}
+
+@inproceedings{myzili2012coverage,
+  title={Coverage criteria for software testing: A systematic mapping study},
+  author={Myzili, André and Neto, Francisco and Travassos, Guilherme H},
+  booktitle={Proceedings of the International Conference on Evaluation and Assessment in Software Engineering (EASE)},
+  pages={31--40},
+  year={2012}
+}
+
 @misc{apache,
 	Date-Added = {2018-11-20 04:22:28 +0000},
 	Date-Modified = {2018-11-20 04:27:36 +0000},
